[package]
name = "thin-http"
version = "0.1.0"
authors = ["SAITO Atsushi <maldikulo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.8", features = ["wininet"]}

[profile.release]
lto = true
codegen-units = 1
